# quantms-rescoring

./: Dockerfile  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  quantms-rescoring-containers.yml
quantmsrescore/: __init__.py  alphapeptdeep.py  annotator.py  idparquet_reader.py  idxmlreader.py  ms2_model_manager.py  ms2rescore.py  openms.py  psm_clean.py  sage_feature.py  snr.py  transfer_learning.py  utils.py
tests/: test_commands.py
tests/test_data/TMT_Erwinia_1uLSike_Top10HCD_isol2_45stepped_60min_01_comet.idparquet/: protein_groups.parquet  proteins.parquet  psms.parquet  search_params.parquet
tests/test_data/TMT_Erwinia_1uLSike_Top10HCD_isol2_45stepped_60min_01_comet_clean.idparquet/: protein_groups.parquet  proteins.parquet  psms.parquet  search_params.parquet
tests/test_data/TMT_Erwinia_1uLSike_Top10HCD_isol2_45stepped_60min_01_comet_rescored.idparquet/: protein_groups.parquet  proteins.parquet  psms.parquet  search_params.parquet
tests/test_data/TMT_Erwinia_1uLSike_Top10HCD_isol2_45stepped_60min_01_comet_snr.idparquet/: protein_groups.parquet  proteins.parquet  psms.parquet  search_params.parquet
tests/test_data/TMT_Erwinia_1uLSike_Top10HCD_isol2_45stepped_60min_01_msgf.idparquet/: protein_groups.parquet  proteins.parquet  psms.parquet  search_params.parquet
