[tool.poetry]
name = "quantms-rescoring"
description = "quantms-rescoring: Python scripts and helpers for the quantMS workflow"
readme = "README.md"
license = "MIT"
version = "0.0.16"
authors = [
    "Yasset Perez-Riverol <ypriverol@gmail.com>",
    "Dai Chengxin <chengxin2024@126.com>",
    "Julianus Pfeuffer <jule.pf@gmail.com>"
]
keywords = [
    "quantms",
    "proteomics",
    "mass-spectrometry",
    "data-analysis",
    "big data",
    "psm-rescoring",
    "ms2rescore",
    "peptide-identification"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 5 - Production/Stable"
]
packages = [
    { include = "quantmsrescore" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
click = "*"
pyopenms = "3.4.0"
ms2rescore = "3.2.0.post1"
pandas = "*"
numpy = ">=1.25"
psm-utils = "*"
deepLC = ">=3.0"
scipy = "*"
pygam = "*"
protobuf= "*"
ms2pip = ">=4.0"
peptdeep = "1.4.1"
torch = "<2.10.0"
psutil = "*"  # For memory-aware process count in HPC environments

[tool.poetry.urls]
Homepage = "https://quantms.org"
Documentation = "https://docs.quantms.org"
GitHub = "https://github.com/bigbio/quantms-rescoring"
"Bug Tracker" = "https://github.com/bigbio/quantms-rescoring/issues"
PyPI = "https://pypi.org/project/quantms-rescoring/"

[tool.poetry.scripts]
rescoring = "quantmsrescore.rescoring:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"